--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,21 @@ dist
 
 # TernJS port file
 .tern-port
+
+node_modules
+.DS_Store
+dist-ssr
+*.local
+
+/cypress/videos/
+/cypress/screenshots/
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
