--- a/vue-blog/package.json
+++ b/vue-blog/package.json
@@ -1,19 +1,20 @@
 {
-    "name": "vue-blog",
-    "version": "0.0.0",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview --port 5050",
-        "stylecheck": "prettier --check .",
-        "format": "prettier --write ."
-    },
-    "dependencies": {
-        "vue": "^3.2.31"
-    },
-    "devDependencies": {
-        "@vitejs/plugin-vue": "^2.3.1",
-        "prettier": "^2.6.2",
-        "vite": "^2.9.1"
-    }
+  "name": "vue-blog",
+  "version": "0.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview --port 5050",
+    "stylecheck": "prettier --check .",
+    "format": "prettier --write ."
+  },
+  "dependencies": {
+    "vue": "^3.2.31",
+    "vue-router": "^4.0.14"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^2.3.1",
+    "prettier": "^2.6.2",
+    "vite": "^2.9.1"
+  }
 }
